[package]
name = "webp-dev"
version = "0.4.1"
authors = ["colbyn <hello@colbyn.com>"]
edition = "2018"
keywords = ["webp", "compression", "vp8", "webm", "image"]
description = "Rust bindings to libwebp (plus related) and some other miscellaneous stuff."
license = "MIT"
homepage = "https://github.com/imager-io/webp-dev-rs"
repository = "https://github.com/imager-io/webp-dev-rs"
readme = "README.md"

[features]
default = []
buildtype-docs-only = []

[dependencies]
libc = "^0.2"
image = "^0.22"

[build-dependencies]
tar = "0.4.26"
flate2 = "1.0.12"
bindgen = "0.51"
cc = "1.0.46"
